syntax = "proto3";

message BrainActionProto {

    string				            brainName           = 1;
	repeated float					actions_continous   = 2;
    repeated float					actions_discrete    = 3;
	repeated int32					reset_needed        = 4;
    repeated int32					isDone        = 5;
}